# libtorch-yolov5

./: CMakeLists.txt
include/: utils.h
src/: detector.cpp  main.cpp
